Bug fixes on visualization and other features

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,3 +75,15 @@ svg#sv-visualization-dup {
 #expand-brush-options {
 	width: 250px;
 }
+
+#popup-element{
+    position: absolute !important;
+}
+
+.sleep {
+	pointer-events: none;
+}
+
+.sequence-delete {
+	word-wrap: break-word;
+}
